[gd_scene load_steps=20 format=4 uid="uid://cj75bp0dc2bld"]

[ext_resource type="Script" uid="uid://bagshydqeq54q" path="res://scenes/world/Level3/third_level.gd" id="1_x52e1"]
[ext_resource type="TileSet" uid="uid://dsmryn26h123a" path="res://scenes/world/world_tilemap.tres" id="2_3svjo"]
[ext_resource type="PackedScene" uid="uid://dtycjwyv8wu6m" path="res://scenes/entities/necromancer/necromancer.tscn" id="2_tj5bp"]
[ext_resource type="PackedScene" uid="uid://ccpx5di58b782" path="res://scenes/world/Objects/trapdoor.tscn" id="3_35qqi"]
[ext_resource type="PackedScene" uid="uid://14aejxorpjam" path="res://sound/effects/skeleton_perm_pressure_plate.tscn" id="3_l75yh"]
[ext_resource type="PackedScene" uid="uid://sw0xowg80kyd" path="res://scenes/world/Objects/permanent_pressure_plate.tscn" id="4_mnth8"]
[ext_resource type="PackedScene" uid="uid://b1k3jmunabfsd" path="res://scenes/entities/goblin/goblin.tscn" id="7_vpudw"]
[ext_resource type="PackedScene" uid="uid://bqvghd16833cq" path="res://scenes/entities/skeleton/skeleton.tscn" id="7_w3ugv"]
[ext_resource type="PackedScene" uid="uid://bvor1w6vl73cn" path="res://scenes/world/Objects/floor_spike.tscn" id="8_ij2u7"]
[ext_resource type="LabelSettings" uid="uid://dqpouqganhgon" path="res://ui/default_text.tres" id="9_yohdq"]
[ext_resource type="Script" uid="uid://bgbv83mr8v8bl" path="res://scenes/world/Level3/tutorial_menu_third_level.gd" id="10_1pwpp"]
[ext_resource type="PackedScene" uid="uid://dt1knav3e2bh" path="res://ui/menus.tscn" id="10_b4qvx"]
[ext_resource type="FontFile" uid="uid://bnmkh6c8erw31" path="res://fonts/fusion-pixel-10px-monospaced-jp_5.2.5/ttf/fusion-pixel-10px-monospaced-jp-latin-400-normal.ttf" id="12_s8i6n"]
[ext_resource type="PackedScene" uid="uid://b72abx5wxiqnp" path="res://scripts/components/game_lose_component.tscn" id="14_wvver"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4si7q"]
bg_color = Color(0, 0.766743, 0.870854, 1)
border_width_left = 4
border_width_top = 3
border_width_right = 4
border_width_bottom = 9
border_color = Color(0, 0.227451, 0.690196, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8hjxc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5th28"]
bg_color = Color(0.0588235, 0.529412, 0.843137, 1)
border_width_left = 4
border_width_top = 3
border_width_right = 4
border_width_bottom = 8
border_color = Color(0, 0.227451, 0.690196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fxbwa"]
bg_color = Color(0.286275, 0.894118, 1, 1)
border_width_left = 4
border_width_top = 3
border_width_right = 4
border_width_bottom = 5
border_color = Color(0, 0.227451, 0.690196, 1)

[sub_resource type="Theme" id="Theme_ij2u7"]
MainMenuButton/base_type = &"Button"
MainMenuButton/colors/font_color = Color(0.211765, 0.0235294, 0.356863, 1)
MainMenuButton/colors/font_disabled_color = Color(0, 0, 0, 1)
MainMenuButton/colors/font_focus_color = Color(0, 0, 0, 1)
MainMenuButton/colors/font_hover_color = Color(0, 0, 0, 1)
MainMenuButton/colors/font_hover_pressed_color = Color(0, 0, 0, 1)
MainMenuButton/colors/font_outline_color = Color(0, 0, 0, 1)
MainMenuButton/colors/font_pressed_color = Color(0, 0, 0, 1)
MainMenuButton/colors/icon_disabled_color = Color(0, 0, 0, 1)
MainMenuButton/colors/icon_focus_color = Color(0, 0, 0, 1)
MainMenuButton/colors/icon_hover_color = Color(0, 0, 0, 1)
MainMenuButton/colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
MainMenuButton/colors/icon_normal_color = Color(0, 0, 0, 1)
MainMenuButton/colors/icon_pressed_color = Color(0, 0, 0, 1)
MainMenuButton/constants/align_to_largest_stylebox = 0
MainMenuButton/constants/h_separation = 0
MainMenuButton/constants/icon_max_width = 0
MainMenuButton/constants/outline_size = 0
MainMenuButton/font_sizes/font_size = 10
MainMenuButton/fonts/font = ExtResource("12_s8i6n")
MainMenuButton/styles/disabled = SubResource("StyleBoxFlat_4si7q")
MainMenuButton/styles/focus = SubResource("StyleBoxEmpty_8hjxc")
MainMenuButton/styles/hover = SubResource("StyleBoxFlat_5th28")
MainMenuButton/styles/normal = SubResource("StyleBoxFlat_4si7q")
MainMenuButton/styles/pressed = SubResource("StyleBoxFlat_fxbwa")
SettingsButton/base_type = &"Button"

[node name="ThirdLevel" type="Node2D"]
script = ExtResource("1_x52e1")

[node name="YSortOrigin" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Necromancer" parent="YSortOrigin" instance=ExtResource("2_tj5bp")]
position = Vector2(60, 89)

[node name="Goblin" parent="YSortOrigin" instance=ExtResource("7_vpudw")]
y_sort_enabled = true
position = Vector2(217, 91)

[node name="SkeletonPermPressurePlate" parent="YSortOrigin" instance=ExtResource("3_l75yh")]
z_index = -4
position = Vector2(135, 129)

[node name="PermanentPressurePlate" parent="YSortOrigin" instance=ExtResource("4_mnth8")]
position = Vector2(135, 32)

[node name="Trapdoor" parent="YSortOrigin" instance=ExtResource("3_35qqi")]
position = Vector2(224, 80)

[node name="Skeleton" parent="YSortOrigin" instance=ExtResource("7_w3ugv")]
y_sort_enabled = true
position = Vector2(61, 104)

[node name="FloorSpike" parent="YSortOrigin" instance=ExtResource("8_ij2u7")]
position = Vector2(80, 32)

[node name="FloorSpike2" parent="YSortOrigin" instance=ExtResource("8_ij2u7")]
position = Vector2(192, 32)

[node name="FloorSpike3" parent="YSortOrigin" instance=ExtResource("8_ij2u7")]
position = Vector2(192, 128)

[node name="FloorSpike4" parent="YSortOrigin" instance=ExtResource("8_ij2u7")]
position = Vector2(80, 128)

[node name="FloorSpike5" parent="YSortOrigin" instance=ExtResource("8_ij2u7")]
position = Vector2(64, 112)

[node name="FloorSpike6" parent="YSortOrigin" instance=ExtResource("8_ij2u7")]
position = Vector2(64, 48)

[node name="FloorSpike7" parent="YSortOrigin" instance=ExtResource("8_ij2u7")]
position = Vector2(208, 48)

[node name="FloorSpike8" parent="YSortOrigin" instance=ExtResource("8_ij2u7")]
position = Vector2(208, 112)

[node name="Wall" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAEAAAAAAAAAAAADAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAAFAAEAAAABAAAAAAAGAAEAAAABAAAAAAAHAAEAAAABAAAAAAAIAAEAAAABAAAAAAAJAAEAAAABAAAAAAAKAAEAAAABAAAAAAALAAEAAAABAAAAAAAMAAEAAAABAAAAAAANAAEAAAAAAAAAAAAOAAEAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAADAAkAAAAAAAAAAAAEAAkAAAAAAAAAAAAFAAkAAAAAAAAAAAAGAAkAAAAAAAAAAAAHAAkAAAAAAAAAAAAIAAkAAAAAAAAAAAAJAAkAAAAAAAAAAAAKAAkAAAAAAAAAAAALAAkAAAAAAAAAAAAMAAkAAAAAAAAAAAANAAkAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAABAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAAAAAAAAAANAAIAAAABAAAAAAANAAgAAAAAAAAAAAADAAgAAAAAAAAAAAADAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAABAAAAAAAEAAIAAAABAAAAAAA=")
tile_set = ExtResource("2_3svjo")

[node name="Floor" type="TileMapLayer" parent="."]
z_index = -13
tile_map_data = PackedByteArray("AAADAAcAAAABAAIAAAAEAAUAAAADAAIAAAAGAAUAAAAAAAIAAAAGAAgAAAACAAIAAAAHAAMAAAACAAIAAAAKAAIAAAABAAIAAAALAAUAAAABAAIAAAANAAQAAAABAAIAAAAOAAcAAAAAAAIAAAA=")
tile_set = ExtResource("2_3svjo")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 7

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(32, 16, 255, 16, 255, 31, 252, 30, 81, 31, 83, 52, 68, 52, 68, 67, 50, 67, 50, 110, 66, 110, 66, 124, 82, 125, 82, 141, 206, 142, 206, 125, 222, 126, 222, 109, 238, 109, 239, 66, 221, 67, 221, 51, 205, 50, 206, 35, 254, 38, 255, 159, 35, 159)

[node name="Menus" parent="." instance=ExtResource("10_b4qvx")]

[node name="TutorialMenu" type="CanvasLayer" parent="."]
script = ExtResource("10_1pwpp")

[node name="TutorialBox" type="Control" parent="TutorialMenu"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="TutorialMenu/TutorialBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="TutorialMenu/TutorialBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -11.5
offset_right = 65.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Skeleton can attack Goblin"
label_settings = ExtResource("9_yohdq")

[node name="ProceedButton" type="Button" parent="TutorialMenu/TutorialBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 30)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -44.0
offset_right = 30.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme = SubResource("Theme_ij2u7")
theme_type_variation = &"MainMenuButton"
text = "Proceed
"

[node name="Timer" type="Timer" parent="TutorialMenu"]
wait_time = 0.6
one_shot = true

[node name="GameLoseComponent" parent="." node_paths=PackedStringArray("necromancer") instance=ExtResource("14_wvver")]
necromancer = NodePath("../YSortOrigin/Necromancer")

[connection signal="pressed" from="TutorialMenu/TutorialBox/ProceedButton" to="TutorialMenu" method="_on_proceed_button_pressed"]

[editable path="YSortOrigin/Skeleton"]
